# backend/app/Models/VehicleRepair.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class VehicleRepair extends Model
+{
+    protected $fillable = ['vehicle_id', 'reason'];
+
+    public function vehicle()
+    {
+        return $this->belongsTo(Vehicle::class);
+    }
+}
